Proyecto2/k8s/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: so12024-proyecto2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: juanpvl/consumerso1p2:1.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
