Proyecto2/k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: so12024-proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
        resources:
          limits:
            cpu: "0.2"
            memory: "500Mi"
          requests:
            cpu: "0.1"
            memory: "250Mi"
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-pvc
        
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: so12024-proyecto2
spec:
  type: LoadBalancer
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
