Proyecto2/k8s/rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-producer
  namespace: so12024-proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-producer
  template:
    metadata:
      labels:
        app: rust-producer
    spec:
      containers:
      - name: rust-client
        image: juanpvl/rust_clientso1p2:1.5
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "0.2"
            memory: "500Mi"
      - name: rust-server
        image: juanpvl/rust_serverso1p2:1.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.2"
            memory: "500Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: rust-client-service
  namespace: so12024-proyecto2
spec:
  selector:
    app: rust-producer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
