Proyecto2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-so12024-proyecto2
  namespace: so12024-proyecto2
spec:
  ingressClassName: nginx
  rules:
    - host: 34.122.92.239.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grpc-client-service
                port:
                  number: 3000
            path: /grpc/insert
          - pathType: Prefix
            backend:
              service:
                name: rust-client-service
                port:
                  number: 8000
            path: /rust/insert
